# flutter_lot_uart

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
lib/: lot_uart.dart
lib/src/: bindings.g.dart  uart.dart
linux/: CMakeLists.txt  lot_uart_plugin.cc
linux/include/lot_uart/: lot_uart_plugin.h
linux/lot_uart/: CMakeLists.txt  lot_uart.cpp  lot_uart.h
